--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 .container{
     background-color: white;
     width: 100%;
-    height: 2160px;
+    height: 2200px;
     text-align: center;
     border-radius: 10px;
     box-shadow: 1px 1px 2px 2px #c0c0c0;
@@ -20,7 +20,7 @@ body{
     margin-right: 1%;
     margin-bottom: 1%;
     margin-left: 1%;
-    height: 670px;
+    height: 690px;
     box-shadow: 1px 1px 2px 2px #f9f9f9;
 }
 
@@ -95,4 +95,33 @@ img{
     margin-top: 1%;
     margin-right: 1%;
     margin-left: 1%;
+}
+
+.minus{
+    background-color: #f2f2f2;
+    border: none;
+    outline: none;
+    box-shadow: 1px 1px 1px 1px #e6e6e6;
+    height: 40px;
+    margin-bottom: 2%;
+    cursor: pointer;
+}
+
+.plus{
+    background-color: #f2f2f2;
+    border: none;
+    outline: none;
+    box-shadow: 1px 1px 1px 1px #e6e6e6;
+    height: 40px;
+    margin-bottom: 2%;
+    cursor: pointer;
+}
+
+.text{
+    background-color: white;
+    text-align: center;
+    border: none;
+    outline: none;
+    padding-left: 5%;
+    width: 20%;
 }
