--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body{
 .container{
     background-color: white;
     width: 100%;
-    height: 2200px;
+    height: 100%;
+    padding-bottom: 2%;
     text-align: center;
     border-radius: 10px;
     box-shadow: 1px 1px 2px 2px #c0c0c0;
@@ -117,7 +118,16 @@ img{
     cursor: pointer;
 }
 
-.text{
+.input-text{
+    background-color: white;
+    text-align: center;
+    border: none;
+    outline: none;
+    padding-left: 5%;
+    width: 20%;
+}
+
+.qty text{
     background-color: white;
     text-align: center;
     border: none;
