--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     box-shadow: 1px 1px 2px 2px #c0c0c0;
 }
 
-.container2e3{
+.container1and2{
     font-size: small;
     background-color: #f2f2f2;
     border-radius: 10px;
@@ -25,7 +25,7 @@ body{
     box-shadow: 1px 1px 2px 2px #f9f9f9;
 }
 
-.container4{
+.container3{
     font-size: small;
     background-color: #f2f2f2;
     border-radius: 10px;
@@ -136,31 +136,25 @@ img{
     width: 20%;
 }
 
-#inicio{
-    text-align: left;
-    margin-top: 1%;
-    margin-left: 1%;
-}
-
-#saida{
+#exit{
     text-align: left;
     font-weight: bolder;
     margin-left: 1%;
 }
 
-#saida2{
+#exit1{
     text-align: left;
     margin-top: 3%;
     margin-left: 1%;
 }
 
-#fim{
+#end{
     text-align: left;
     list-style-type: disc;
     margin-left: 1%;
 }
 
-#calculo{
+#calculation{
     text-align: left;
     margin-left: 1%;
     font-weight: bolder;
